HVAC Backup 2/objects/Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendance</relationshipLabel>
        <relationshipName>Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logged_Time__c</fullName>
        <label>Logged Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Contact__r.FirstName +  Contact__r.LastName</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <label>Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attendance__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Name__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Logged_Time__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AN-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>